# F95Checker

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  main.py  meson.build  meson.options  requirements.txt  setup.py
.github/workflow_data/: release.py
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_specific_info.md  suggested_commands.md  task_completion_guidelines.md
browser/: integrated.js
common/: legacy_parser.py  meta.py  parser.py  structs.py
indexer/: cache.py  f95zone.py  scraper.py  watcher.py
indexer/modules/: structs.py
lib/: std.h
lib/bc7e/: CMakeLists.txt  bc7e.h  bc7e_avx.h  bc7e_avx2.h  bc7e_sse2.h  bc7e_sse4.h
lib/dcimgui/: CMakeLists.txt
lib/fonts/: CMakeLists.txt
lib/glad/: CMakeLists.txt  requirements.txt
lib/icons/: CMakeLists.txt  icon.py  icon_refreshing1.c  icon_refreshing10.c  icon_refreshing11.c  icon_refreshing12.c  icon_refreshing13.c  icon_refreshing14.c  icon_refreshing15.c  icon_refreshing16.c  icon_refreshing2.c  icon_refreshing3.c  icon_refreshing4.c  icon_refreshing5.c  icon_refreshing6.c  icon_refreshing7.c  icon_refreshing8.c  icon_refreshing9.c  icons.h
modules/: api.py  api_legacy.py  callbacks.py  db.py  globals.py  gui.py  patches.py  rpdl.py  structs.py  utils.py  webview.py
python/: requirements.txt
python/modules/: db.py  globals.py
src/: globals.h  main.c
src/db/: cookies.c  cookies.h  db.c  db.h  db_i.h  game_timeline_events.c  game_timeline_events.h  games.c  games.h  settings.c
src/game/: game.c  game.h  types.c  types.h
src/gui/: backend.c  backend.h  fonts.c  fonts.h  gui.c  gui.h  icons.c  icons.h  tray.c  tray.h  ui.c  ui.h  window.c  window.h
src/settings/: settings.h  types.c  types.h
src/types/: cookie.h  label.h  tab.h
subprojects/bc7e/: meson.build
subprojects/c7zip/: c7zip.cpp  c7zip.h  meson.build
subprojects/dcimgui/: dcimconfig.h  meson.build
subprojects/fonts/: meson.build
subprojects/glad/: meson.build
subprojects/icons/: meson.build
subprojects/shlex/: meson.build  shlex.cpp
subprojects/sqlite3/: meson.build
